--- a/animeview.html
+++ b/animeview.html
@@ -5,12 +5,12 @@
     <title>TAFASU - Fansub Community</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css?v=3.3.6">
-    <link rel="stylesheet" href="css/ro.css">
     <link rel="stylesheet" href="css/tafasu.css?v=2018016-1">
-    <link rel="stylesheet" href="css/japaripark.css">
+    <link rel="stylesheet" href="css/customize.css">
+    <link rel="stylesheet" href="css/clock-roll.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css"/>
     <link rel="shortcut icon" href="images/default-favicon.png">
-    <meta name="theme-color" content="#004DA6">
+    <meta name="theme-color" content="#B52F28">
     <meta property="og:image" content="https://i.imgur.com/4KTJuoM.png">
     <meta property="og:title" content="TAFASU - Fansub Community">
     <meta property="og:type" content="website">
@@ -27,12 +27,10 @@
           </div>
         </div>
       </section>
-      <div class="ro">
-        <p class="ro1"><img src="images/ro/ro_01.png" height="750" width="750" alt=""></p>
-        <p class="ro2"><img src="images/ro/ro_02.png" height="750" width="750" alt=""></p>
-        <p class="ro1"><img src="images/ro/ro_03.png" height="750" width="750" alt=""></p>
-        <p class="ro2"><img src="images/ro/ro_04.png" height="750" width="750" alt=""></p>
-        <p class="ro1"><img src="images/ro/ro_05.png" height="750" width="750" alt=""></p>
+      <div class="clock-roll">
+        <p class="clock-roll-1"><img src="images/clock/clock_01.png" height="750" width="750" alt=""></p>
+        <p class="clock-roll-3"><img src="images/clock/clock_03.png" height="750" width="750" alt=""></p>
+        <p class="clock-roll-4"><img src="images/clock/clock_04.png" height="750" width="750" alt=""></p>
       </div>
       <nav class="navbar navbar-default web-navbar">
         <div class="container">
@@ -57,15 +55,19 @@
                   <li><a href="genre.html">โดยประเภท</a></li>
                 </ul>
               </li>
-              <li><a href="news.html">
-                <span class="glyphicon glyphicon-bullhorn"></span> ข่าวสาร</a>
-              </li>
               <li><a href="schedule.html">
                 <span class="glyphicon glyphicon-calendar"></span> ตารางปล่อย</a>
               </li>
-              <li><a href="fansub.html">
-                <span class="glyphicon glyphicon-folder-open"></span> แฟนซับ</a>
+              <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                <span class="glyphicon glyphicon-folder-open"></span> รายชื่อค่าย<span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a href="fansub.html">แฟนซับ</a></li>
+                  <li><a href="fandub.html">แฟนดั๊บ</a></li>
+                </ul>
               </li>
+              <li><a href="donate.html"><span class="glyphicon glyphicon-bitcoin"></span> บริจาค</a></li>
               <li><a href="#"><span class="glyphicon glyphicon-menu-hamburger"></span> กระทู้</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -190,10 +192,6 @@
             <div class="well well-sm">
               <p><a href="animeview.html">[ชื่อแฟนซับ] ชื่อเรื่อง</a></p>
             </div>
-            <strong>ข่าวสาร</strong>
-            <div class="well well-sm">
-              <p><a href="#">ข่าวสารเรื่องที่ 1</a></p>
-            </div>
             <strong>ติดตาม </strong>
             <div class="well well-sm">
               <div>
@@ -212,6 +210,7 @@
       </div>
     </main>
     <footer>
+      <img id="ai-chan-to-top"></img>
       <div class="web-footer jumbotron"
         style="margin-top:10px; margin-bottom:0px;/*background-color:#55AAFF;*/ padding-top: 10px; padding-bottom: 10px;">
         <div class="container">
@@ -234,5 +233,6 @@
     </footer>
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/ai-chan-to-top.js"></script>
   </body>
 </html>
