--- a/donate.html
+++ b/donate.html
@@ -72,7 +72,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li class="dropdown">
-                <a href="fansubview.html" class="dropdown-toggle" data-toggle="dropdown"><span
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span
                   class="glyphicon glyphicon-log-in"></span><span> เข้าสู่ระบบ</span></a>
                 <ul id="login-dp" class="dropdown-menu">
                   <li>
@@ -110,125 +110,175 @@
       <div class="container">
         <div class="rows">
           <div class="col-sm-8">
-            <div class="fsdb" id="fsdb">
-              <ul class="nav nav-tabs">
-                <li class="active">
-                  <a href="?letter=A">A</a>
-                </li>
-                <li class="">
-                  <a href="?letter=B">B</a>
-                </li>
-                <li class="">
-                  <a href="?letter=C">C</a>
-                </li>
-                <li class="">
-                  <a href="?letter=D">D</a>
-                </li>
-                <li class="">
-                  <a href="?letter=E">E</a>
-                </li>
-                <li class="">
-                  <a href="?letter=F">F</a>
-                </li>
-                <li class="">
-                  <a href="?letter=G">G</a>
-                </li>
-                <li class="">
-                  <a href="?letter=H">H</a>
-                </li>
-                <li class="">
-                  <a href="?letter=I">I</a>
-                </li>
-                <li class="">
-                  <a href="?letter=J">J</a>
-                </li>
-                <li class="">
-                  <a href="?letter=K">K</a>
-                </li>
-                <li class="">
-                  <a href="?letter=L">L</a>
-                </li>
-                <li class="">
-                  <a href="?letter=M">M</a>
-                </li>
-                <li class="">
-                  <a href="?letter=N">N</a>
-                </li>
-                <li class="">
-                  <a href="?letter=O">O</a>
-                </li>
-                <li class="">
-                  <a href="?letter=P">P</a>
-                </li>
-                <li class="">
-                  <a href="?letter=Q">Q</a>
-                </li>
-                <li class="">
-                  <a href="?letter=R">R</a>
-                </li>
-                <li class="">
-                  <a href="?letter=S">S</a>
-                </li>
-                <li class="">
-                  <a href="?letter=T">T</a>
-                </li>
-                <li class="">
-                  <a href="?letter=U">U</a>
-                </li>
-                <li class="">
-                  <a href="?letter=V">V</a>
-                </li>
-                <li class="">
-                  <a href="?letter=W">W</a>
-                </li>
-                <li class="">
-                  <a href="?letter=X">X</a>
-                </li>
-                <li class="">
-                  <a href="?letter=Y">Y</a>
-                </li>
-                <li class="">
-                  <a href="?letter=Z">Z</a>
-                </li>
-                <li class="">
-                  <a href="?letter=naz">#</a>
-                </li>
-              </ul>
-              <h3>A</h3>
-              <div class="list-group">
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a href="fansubview.html" class="list-group-item" style="background-color: #8BC34A; color:white;"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a href="fansubview.html" class="list-group-item" style="background-color: #8BC34A; color:white;"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a href="fansubview.html" class="list-group-item" style="background-color: #8BC34A; color:white;"> ค่ายแฟนซับ </a>
-                <a href="fansubview.html" class="list-group-item" style="background-color: #8BC34A; color:white;"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a href="fansubview.html" class="list-group-item" style="background-color: #8BC34A; color:white;"> ค่ายแฟนซับ </a>
-                <a href="fansubview.html" class="list-group-item" style="background-color: #8BC34A; color:white;"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a href="fansubview.html" class="list-group-item" style="background-color: #8BC34A; color:white;"> ค่ายแฟนซับ </a>
-                <a href="fansubview.html" class="list-group-item" style="background-color: #757575; color:white;"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a href="fansubview.html" class="list-group-item" style="background-color: #8BC34A; color:white;"> ค่ายแฟนซับ </a>
-                <a href="fansubview.html" class="list-group-item" style="background-color: #8BC34A; color:white;"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-                <a class="list-group-item"> ค่ายแฟนซับ </a>
-              </div>
-              <p style="color:#8BC34A;"><b><i>สีเขียว คือแฟนซับที่มีข้อมูลอนิเมะและโปรเจคบน TAFASU.com</i></b></p>
-              <p style="color:#757575;"><b><i>สีเทาคือแฟนซับที่ปิดแล้ว</i></b></p>
+            <h3 class="page-header" style="margin-top:0px;">บริจาค</h3>
+            <center>
+              <h2>
+                การรับบริจาคสำหรับปี 2019 <br>ยอดบริจาค 0 บาท <br /> จากเป้าหมาย 4000 บาท
+              </h2>
+            </center>
+            <center>
+              <a class="btn btn-primary" href="https://paypal.me/tafasu" target="_blank">บริจาคผ่าน Paypal</a>
+            </center>
+            <p style="margin-top:20px;">
+              ร่วมบริจาคเงินช่วยเหลือ TAFASU สำหรับค่าใช้จ่ายต่างๆ สำหรับปี 2019 โดยยอดเงินบริจาคที่ต้องการเป็นเงินทั้งสิ้น 4,000 บาท โดยจะปิดรับเมื่อยอดเงินถึงเป้าหมาย โดยจะเปิดรับเป็นรายปี ท่านสามารถร่วมบริจาคได้ผ่านช่องทางดังต่อไปนี้ <a target="_blank" href="https://paypal.me/tafasu">paypal.me/tafasu</a>
+              <br /><u><b><font color="red">อย่าลืม</font></b></u> ถ่ายภาพหน้าจอหลักฐานการทำรายการ ที่แสดงให้เห็นถึง วันที่ รายละเอียดผู้รับ รหัสการทำรายการ และจำนวนเงิน
+            </p>
+            <h3 class="page-header">ตรา</h3>
+            <p>สำหรับทุกท่านที่ร่วมบริจาค และยังไม่มีตราประทับอื่นใด (เช่น Fansubber) จะได้รับตราตามจำนวนขั้นต่ำที่คุณบริจาค (นับรวมค่าทำเนียมด้วย)</p>
+            <table class="table table-striped table-hover">
+              <thead>
+                <tr>
+                  <th>ตรา</th>
+                  <th>ยอดเงิน</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><img src="images/rank/White-Gem.gif" /> Donator</td>
+                  <td> 50</td>
+                </tr>
+                <tr>
+                  <td><img src="images/rank/Red-Gem.gif" /> 144p Donator</td>
+                  <td>144</td>
+                </tr>
+                <tr>
+                  <td><img src="images/rank/Orange-Gem.gif" /> 240p Donator</td>
+                  <td>240</td>
+                </tr>
+                <tr>
+                  <td><img src="images/rank/Yellow-Gem.gif" /> 320p Donator</td>
+                  <td>320</td>
+                </tr>
+                <tr>
+                  <td><img src="images/rank/Green-Gem.gif" /> 480p Donator</td>
+                  <td>480</td>
+                </tr>
+                <tr>
+                  <td><img src="images/rank/Blue-Gem.gif" /> 720p Donator</td>
+                  <td>720</td>
+                </tr>
+                <tr>
+                  <td><img src="images/rank/Dark-Blue-Gem.gif" /> 1080p Donator</td>
+                  <td>1080</td>
+                </tr>
+                <tr>
+                  <td><img src="images/rank/Purple-Gem.gif" /> 2K Donator</td>
+                  <td>2000</td>
+                </tr>
+                <tr>
+                  <td><img src="images/rank/Pink-Gem.gif" /> 4K Donator</td>
+                  <td>4000</td>
+                </tr>
+              </tbody>
+            </table>
+            <h3 class="page-header">แจ้งบริจาค</h3>
+            <div>
+              ชื่อผู้ใช้: ผู้ใช้ปัจจุบัน
             </div>
+            <form id="donateForm">
+              <div class="form-group">
+                <label for="moneycost">ยอดเงินบริจาค</label>
+                <input type="text" class="form-control" id="moneycost" name="money" placeholder="ยอดเงิน (หน่วยบาท)">
+              </div>
+              <div class="form-group">
+                <label for="serialsn">รหัสทำรายการ</label>
+                <input type="text" class="form-control" id="serialsn" name="transactionid" placeholder="รหัสทำรายการ (Transaction id)">
+              </div>
+              <div class="form-group">
+                <label for="file">หลักฐานการทำรายการ (รูปภาพเท่านั้น)</label>
+                <input type="file" class="form-control" id="file" name="image" accept="image/jpeg, image/png" placeholder="ภาพถ่ายหน้าจอ">
+              </div>
+              <button class="btn btn-primary" type="submit">ยืนยันการบริจาต</button>
+            </form>
+            <h3 class="page-header">ผู้บริจาค</h3>
+            <div class="table">
+              <table class="table table-striped table-hover">
+                <thead>
+                  <tr>
+                    <th>ชื่อผู้ใช้</th>
+                    <th>ยอดเงิน</th>
+                    <th>ค่าธรรมเนียม</th>
+                    <th>ยอดเงินสุทธิ</th>
+                    <th>สถานะ</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>นาย A</td>
+                    <td>180</td>
+                    <td>18.02</td>
+                    <td>161.98</td>
+                    <td>accepted</td>
+                  </tr>
+                  <tr>
+                    <td>นาย B</td>
+                    <td>796.84</td>
+                    <td>36.84</td>
+                    <td>760</td>
+                    <td>accepted</td>
+                  </tr>
+                  <tr>
+                    <td>นาย C</td>
+                    <td>100</td>
+                    <td>14.9</td>
+                    <td>85.1</td>
+                    <td>accepted</td>
+                  </tr>
+                  <tr>
+                    <td>นาย D</td>
+                    <td>50</td>
+                    <td>12.95</td>
+                    <td>37.05</td>
+                    <td>accepted</td>
+                  </tr>
+                  <tr>
+                    <td>นาย E</td>
+                    <td>300</td>
+                    <td>22.7</td>
+                    <td>277.3</td>
+                    <td>accepted</td>
+                  </tr>
+                  <tr>
+                    <td>นาย F</td>
+                    <td>100</td>
+                    <td>14.9</td>
+                    <td>85.1</td>
+                    <td>accepted</td>
+                  </tr>
+                  <tr>
+                    <td>นาย F</td>
+                    <td>100</td>
+                    <td>14.9</td>
+                    <td>85.1</td>
+                    <td>accepted</td>
+                  </tr>
+                  <tr>
+                    <td>นาย G</td>
+                    <td>100</td>
+                    <td>14.9</td>
+                    <td>85.1</td>
+                    <td>accepted</td>
+                  </tr>
+                  <tr>
+                    <td>นาย H</td>
+                    <td>100</td>
+                    <td>14.9</td>
+                    <td>85.1</td>
+                    <td>accepted</td>
+                  </tr>
+                  <tr>
+                    <td>นาย I</td>
+                    <td>4</td>
+                    <td>0</td>
+                    <td>4</td>
+                    <td>rejected</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <center>
+              <a href="#">ดูรายชื่อผู้บริจาคเพิ่มเติม</a>
+            </center>
           </div>
           <div class="col-sm-4">
             <strong> ค้นหา</strong>
