--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>TAFASU - Fansub Community</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css?v=3.3.6">
-    <link rel="stylesheet" href="css/ro.css">
     <link rel="stylesheet" href="css/tafasu.css?v=2018016-1">
-    <link rel="stylesheet" href="css/japaripark.css">
+    <link rel="stylesheet" href="css/customize.css">
+    <link rel="stylesheet" href="css/clock-roll.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css"/>
     <link rel="shortcut icon" href="images/default-favicon.png">
-    <meta name="theme-color" content="#004DA6">
+    <meta name="theme-color" content="#B52F28">
     <meta property="og:image" content="https://i.imgur.com/4KTJuoM.png">
     <meta property="og:title" content="TAFASU - Fansub Community">
     <meta property="og:type" content="website">
@@ -20,19 +20,17 @@
   </head>
   <body>
     <header>
-      <section class="full-screen" id="header" style="background-image: url(images/banner-background.jpg);">
+      <section class="full-screen" id="header">
         <div class="container">
           <div class="logo">
             <a href="/"><img src="images/logo.png" alt="TAFASU"></a>
           </div>
         </div>
       </section>
-      <div class="ro">
-        <p class="ro1"><img src="images/ro/ro_01.png" height="750" width="750" alt=""></p>
-        <p class="ro2"><img src="images/ro/ro_02.png" height="750" width="750" alt=""></p>
-        <p class="ro1"><img src="images/ro/ro_03.png" height="750" width="750" alt=""></p>
-        <p class="ro2"><img src="images/ro/ro_04.png" height="750" width="750" alt=""></p>
-        <p class="ro1"><img src="images/ro/ro_05.png" height="750" width="750" alt=""></p>
+      <div class="clock-roll">
+        <p class="clock-roll-1"><img src="images/clock/clock_01.png" height="750" width="750" alt=""></p>
+        <p class="clock-roll-3"><img src="images/clock/clock_03.png" height="750" width="750" alt=""></p>
+        <p class="clock-roll-4"><img src="images/clock/clock_04.png" height="750" width="750" alt=""></p>
       </div>
       <nav class="navbar navbar-default web-navbar">
         <div class="container">
@@ -57,15 +55,19 @@
                   <li><a href="genre.html">โดยประเภท</a></li>
                 </ul>
               </li>
-              <li><a href="news.html">
-                <span class="glyphicon glyphicon-bullhorn"></span> ข่าวสาร</a>
-              </li>
               <li><a href="schedule.html">
                 <span class="glyphicon glyphicon-calendar"></span> ตารางปล่อย</a>
               </li>
-              <li><a href="fansub.html">
-                <span class="glyphicon glyphicon-folder-open"></span> แฟนซับ</a>
+              <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                <span class="glyphicon glyphicon-folder-open"></span> รายชื่อค่าย<span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a href="fansub.html">แฟนซับ</a></li>
+                  <li><a href="fandub.html">แฟนดั๊บ</a></li>
+                </ul>
               </li>
+              <li><a href="donate.html"><span class="glyphicon glyphicon-bitcoin"></span> บริจาค</a></li>
               <li><a href="#"><span class="glyphicon glyphicon-menu-hamburger"></span> กระทู้</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -111,12 +113,11 @@
             <div>
               <h3 style="margin-top:0;" class="page-header">อนิเมะใหม่</h3>
               <div class="table">
-                <table class="table  table-striped table-hover">
+                <table class="table table-striped table-hover table-more-height">
                   <thead>
                     <tr>
-                      <th width="15%">วันปล่อย</th>
-                      <th width="70%">ชื่อเรื่อง - ตอน</th>
-                      <th width="15%"></th>
+                      <th width="10%">วันปล่อย</th>
+                      <th width="">ชื่อเรื่อง - ตอน</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -131,9 +132,17 @@
                         </a>
                         </font> - ชื่อตอน
                       </td>
+                    </tr>
+                    <tr>
                       <td>
-                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
-                        ดาวน์โหลด</a>
+                        เดือน/วัน
+                      </td>
+                      <td>
+                        <font class="text-primary">
+                        <a aniid="1" href="watch.html" class="" data-original-title="" title="">
+                        [ชื่อแฟนซับ] ชื่อเรื่อง
+                        </a>
+                        </font> - ชื่อตอน
                       </td>
                     </tr>
                     <tr>
@@ -147,9 +156,17 @@
                         </a>
                         </font> - ชื่อตอน
                       </td>
+                    </tr>
+                    <tr>
                       <td>
-                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
-                        ดาวน์โหลด</a>
+                        เดือน/วัน
+                      </td>
+                      <td>
+                        <font class="text-primary">
+                        <a aniid="1" href="watch.html" class="" data-original-title="" title="">
+                        [ชื่อแฟนซับ] ชื่อเรื่อง
+                        </a>
+                        </font> - ชื่อตอน
                       </td>
                     </tr>
                     <tr>
@@ -163,9 +180,17 @@
                         </a>
                         </font> - ชื่อตอน
                       </td>
+                    </tr>
+                    <tr>
                       <td>
-                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
-                        ดาวน์โหลด</a>
+                        เดือน/วัน
+                      </td>
+                      <td>
+                        <font class="text-primary">
+                        <a aniid="1" href="watch.html" class="" data-original-title="" title="">
+                        [ชื่อแฟนซับ] ชื่อเรื่อง
+                        </a>
+                        </font> - ชื่อตอน
                       </td>
                     </tr>
                     <tr>
@@ -179,9 +204,17 @@
                         </a>
                         </font> - ชื่อตอน
                       </td>
+                    </tr>
+                    <tr>
                       <td>
-                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
-                        ดาวน์โหลด</a>
+                        เดือน/วัน
+                      </td>
+                      <td>
+                        <font class="text-primary">
+                        <a aniid="1" href="watch.html" class="" data-original-title="" title="">
+                        [ชื่อแฟนซับ] ชื่อเรื่อง
+                        </a>
+                        </font> - ชื่อตอน
                       </td>
                     </tr>
                     <tr>
@@ -195,10 +228,6 @@
                         </a>
                         </font> - ชื่อตอน
                       </td>
-                      <td>
-                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
-                        ดาวน์โหลด</a>
-                      </td>
                     </tr>
                     <tr>
                       <td>
@@ -210,74 +239,6 @@
                         [ชื่อแฟนซับ] ชื่อเรื่อง
                         </a>
                         </font> - ชื่อตอน
-                      </td>
-                      <td>
-                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
-                        ดาวน์โหลด</a>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        เดือน/วัน
-                      </td>
-                      <td>
-                        <font class="text-primary">
-                        <a aniid="1" href="watch.html" class="" data-original-title="" title="">
-                        [ชื่อแฟนซับ] ชื่อเรื่อง
-                        </a>
-                        </font> - ชื่อตอน
-                      </td>
-                      <td>
-                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
-                        ดาวน์โหลด</a>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        เดือน/วัน
-                      </td>
-                      <td>
-                        <font class="text-primary">
-                        <a aniid="1" href="watch.html" class="" data-original-title="" title="">
-                        [ชื่อแฟนซับ] ชื่อเรื่อง
-                        </a>
-                        </font> - ชื่อตอน
-                      </td>
-                      <td>
-                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
-                        ดาวน์โหลด</a>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        เดือน/วัน
-                      </td>
-                      <td>
-                        <font class="text-primary">
-                        <a aniid="1" href="watch.html" class="" data-original-title="" title="">
-                        [ชื่อแฟนซับ] ชื่อเรื่อง
-                        </a>
-                        </font> - ชื่อตอน
-                      </td>
-                      <td>
-                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
-                        ดาวน์โหลด</a>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        เดือน/วัน
-                      </td>
-                      <td>
-                        <font class="text-primary">
-                        <a aniid="1" href="watch.html" class="" data-original-title="" title="">
-                        [ชื่อแฟนซับ] ชื่อเรื่อง
-                        </a>
-                        </font> - ชื่อตอน
-                      </td>
-                      <td>
-                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
-                        ดาวน์โหลด</a>
                       </td>
                     </tr>
                   </tbody>
@@ -414,10 +375,6 @@
             <div class="well well-sm">
               <p><a href="animeview.html">[ชื่อแฟนซับ] ชื่อเรื่อง</a></p>
             </div>
-            <strong>ข่าวสาร</strong>
-            <div class="well well-sm">
-              <p><a href="#">ข่าวสารเรื่องที่ 1</a></p>
-            </div>
             <strong>ติดตาม </strong>
             <div class="well well-sm">
               <div>
@@ -436,6 +393,7 @@
       </div>
     </main>
     <footer>
+      <img id="ai-chan-to-top"></img>
       <div class="web-footer jumbotron"
         style="margin-top:10px; margin-bottom:0px;/*background-color:#55AAFF;*/ padding-top: 10px; padding-bottom: 10px;">
         <div class="container">
@@ -450,7 +408,7 @@
             </div>
             <div class="col-sm-4"></div>
             <div class="col-sm-4" style="text-align: right;">
-              <font color="#fff">Copyright &copy; by<br/>TAFASU 2017 </font>
+              <font color="#fff">Copyright &copy; by<br/>TAFASU 2018 </font>
             </div>
           </div>
         </div>
@@ -459,5 +417,6 @@
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/anime-thumb.js"></script>
+    <script src="js/ai-chan-to-top.js"></script>
   </body>
 </html>
