--- a/genreview.html
+++ b/genreview.html
@@ -5,12 +5,12 @@
     <title>TAFASU - Fansub Community</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css?v=3.3.6">
+    <link rel="stylesheet" href="css/ro.css">
     <link rel="stylesheet" href="css/tafasu.css?v=2018016-1">
-    <link rel="stylesheet" href="css/customize.css">
-    <link rel="stylesheet" href="css/clock-roll.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css"/>
-    <link rel="shortcut icon" href="images/default-favicon.png">
-    <meta name="theme-color" content="#B52F28">
+    <link rel="stylesheet" type="text/css" href="css/theme-xmas.css"/>
+    <link rel="shortcut icon" href="images/xmas-favicon.png">
+    <meta name="theme-color" content="#004DA6">
     <meta property="og:image" content="https://i.imgur.com/4KTJuoM.png">
     <meta property="og:title" content="TAFASU - Fansub Community">
     <meta property="og:type" content="website">
@@ -28,11 +28,7 @@
         </div>
       </section>
       <div class="ro">
-        <p class="ro1"><img src="images/ro/ro_01.png" height="750" width="750" alt=""></p>
-        <p class="ro2"><img src="images/ro/ro_02.png" height="750" width="750" alt=""></p>
-        <p class="ro1"><img src="images/ro/ro_03.png" height="750" width="750" alt=""></p>
-        <p class="ro2"><img src="images/ro/ro_04.png" height="750" width="750" alt=""></p>
-        <p class="ro1"><img src="images/ro/ro_05.png" height="750" width="750" alt=""></p>
+        <p class="ro1"><img src="images/ro.png" height="750" width="750" alt=""></p>
       </div>
       <nav class="navbar navbar-default web-navbar">
         <div class="container">
@@ -284,7 +280,7 @@
             </form>
             <strong>ปล่อยวันนี้</strong>
             <div class="well well-sm">
-              <p><a href="animeview.html">[ชื่อแฟนซับ] ชื่อเรื่อง</a></p>
+              <p><a href="#">[ชื่อแฟนซับ] ชื่อเรื่อง</a></p>
             </div>
             <strong>ติดตาม </strong>
             <div class="well well-sm">
@@ -304,7 +300,6 @@
       </div>
     </main>
     <footer>
-      <img id="ai-chan-to-top"></img>
       <div class="web-footer jumbotron"
         style="margin-top:10px; margin-bottom:0px;/*background-color:#55AAFF;*/ padding-top: 10px; padding-bottom: 10px;">
         <div class="container">
@@ -327,6 +322,5 @@
     </footer>
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/ai-chan-to-top.js"></script>
   </body>
 </html>
