--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>TAFASU - Fansub Community</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css?v=3.3.6">
+    <link rel="stylesheet" href="css/ro.css">
     <link rel="stylesheet" href="css/tafasu.css?v=2018016-1">
-    <link rel="stylesheet" href="css/customize.css">
-    <link rel="stylesheet" href="css/clock-roll.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css"/>
-    <link rel="shortcut icon" href="images/default-favicon.png">
+    <link rel="stylesheet" type="text/css" href="css/theme-xmas.css"/>
+    <link rel="shortcut icon" href="images/xmas-favicon.png">
     <meta name="theme-color" content="#B52F28">
     <meta property="og:image" content="https://i.imgur.com/4KTJuoM.png">
     <meta property="og:title" content="TAFASU - Fansub Community">
@@ -20,17 +20,15 @@
   </head>
   <body>
     <header>
-      <section class="full-screen" id="header">
+      <section class="full-screen" id="header" style="background-image: url(images/banner-background.jpg);">
         <div class="container">
           <div class="logo">
             <a href="/"><img src="images/logo.png" alt="TAFASU"></a>
           </div>
         </div>
       </section>
-      <div class="clock-roll">
-        <p class="clock-roll-1"><img src="images/clock/clock_01.png" height="750" width="750" alt=""></p>
-        <p class="clock-roll-3"><img src="images/clock/clock_03.png" height="750" width="750" alt=""></p>
-        <p class="clock-roll-4"><img src="images/clock/clock_04.png" height="750" width="750" alt=""></p>
+      <div class="ro">
+        <p class="ro1"><img src="images/ro.png" height="750" width="750" alt=""></p>
       </div>
       <nav class="navbar navbar-default web-navbar">
         <div class="container">
@@ -113,11 +111,12 @@
             <div>
               <h3 style="margin-top:0;" class="page-header">อนิเมะใหม่</h3>
               <div class="table">
-                <table class="table table-striped table-hover table-more-height">
+                <table class="table  table-striped table-hover">
                   <thead>
                     <tr>
-                      <th width="10%">วันปล่อย</th>
-                      <th width="">ชื่อเรื่อง - ตอน</th>
+                      <th width="15%">วันปล่อย</th>
+                      <th width="70%">ชื่อเรื่อง - ตอน</th>
+                      <th width="15%"></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -132,17 +131,9 @@
                         </a>
                         </font> - ชื่อตอน
                       </td>
-                    </tr>
-                    <tr>
                       <td>
-                        เดือน/วัน
-                      </td>
-                      <td>
-                        <font class="text-primary">
-                        <a aniid="1" href="watch.html" class="" data-original-title="" title="">
-                        [ชื่อแฟนซับ] ชื่อเรื่อง
-                        </a>
-                        </font> - ชื่อตอน
+                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
+                        ดาวน์โหลด</a>
                       </td>
                     </tr>
                     <tr>
@@ -156,17 +147,9 @@
                         </a>
                         </font> - ชื่อตอน
                       </td>
-                    </tr>
-                    <tr>
                       <td>
-                        เดือน/วัน
-                      </td>
-                      <td>
-                        <font class="text-primary">
-                        <a aniid="1" href="watch.html" class="" data-original-title="" title="">
-                        [ชื่อแฟนซับ] ชื่อเรื่อง
-                        </a>
-                        </font> - ชื่อตอน
+                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
+                        ดาวน์โหลด</a>
                       </td>
                     </tr>
                     <tr>
@@ -180,17 +163,9 @@
                         </a>
                         </font> - ชื่อตอน
                       </td>
-                    </tr>
-                    <tr>
                       <td>
-                        เดือน/วัน
-                      </td>
-                      <td>
-                        <font class="text-primary">
-                        <a aniid="1" href="watch.html" class="" data-original-title="" title="">
-                        [ชื่อแฟนซับ] ชื่อเรื่อง
-                        </a>
-                        </font> - ชื่อตอน
+                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
+                        ดาวน์โหลด</a>
                       </td>
                     </tr>
                     <tr>
@@ -204,17 +179,9 @@
                         </a>
                         </font> - ชื่อตอน
                       </td>
-                    </tr>
-                    <tr>
                       <td>
-                        เดือน/วัน
-                      </td>
-                      <td>
-                        <font class="text-primary">
-                        <a aniid="1" href="watch.html" class="" data-original-title="" title="">
-                        [ชื่อแฟนซับ] ชื่อเรื่อง
-                        </a>
-                        </font> - ชื่อตอน
+                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
+                        ดาวน์โหลด</a>
                       </td>
                     </tr>
                     <tr>
@@ -228,6 +195,10 @@
                         </a>
                         </font> - ชื่อตอน
                       </td>
+                      <td>
+                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
+                        ดาวน์โหลด</a>
+                      </td>
                     </tr>
                     <tr>
                       <td>
@@ -239,6 +210,74 @@
                         [ชื่อแฟนซับ] ชื่อเรื่อง
                         </a>
                         </font> - ชื่อตอน
+                      </td>
+                      <td>
+                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
+                        ดาวน์โหลด</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        เดือน/วัน
+                      </td>
+                      <td>
+                        <font class="text-primary">
+                        <a aniid="1" href="watch.html" class="" data-original-title="" title="">
+                        [ชื่อแฟนซับ] ชื่อเรื่อง
+                        </a>
+                        </font> - ชื่อตอน
+                      </td>
+                      <td>
+                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
+                        ดาวน์โหลด</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        เดือน/วัน
+                      </td>
+                      <td>
+                        <font class="text-primary">
+                        <a aniid="1" href="watch.html" class="" data-original-title="" title="">
+                        [ชื่อแฟนซับ] ชื่อเรื่อง
+                        </a>
+                        </font> - ชื่อตอน
+                      </td>
+                      <td>
+                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
+                        ดาวน์โหลด</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        เดือน/วัน
+                      </td>
+                      <td>
+                        <font class="text-primary">
+                        <a aniid="1" href="watch.html" class="" data-original-title="" title="">
+                        [ชื่อแฟนซับ] ชื่อเรื่อง
+                        </a>
+                        </font> - ชื่อตอน
+                      </td>
+                      <td>
+                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
+                        ดาวน์โหลด</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        เดือน/วัน
+                      </td>
+                      <td>
+                        <font class="text-primary">
+                        <a aniid="1" href="watch.html" class="" data-original-title="" title="">
+                        [ชื่อแฟนซับ] ชื่อเรื่อง
+                        </a>
+                        </font> - ชื่อตอน
+                      </td>
+                      <td>
+                        <a href="watch.html" class="btn btn-primary btn-sm" role="button">ดู &amp;
+                        ดาวน์โหลด</a>
                       </td>
                     </tr>
                   </tbody>
@@ -393,7 +432,6 @@
       </div>
     </main>
     <footer>
-      <img id="ai-chan-to-top"></img>
       <div class="web-footer jumbotron"
         style="margin-top:10px; margin-bottom:0px;/*background-color:#55AAFF;*/ padding-top: 10px; padding-bottom: 10px;">
         <div class="container">
@@ -408,7 +446,7 @@
             </div>
             <div class="col-sm-4"></div>
             <div class="col-sm-4" style="text-align: right;">
-              <font color="#fff">Copyright &copy; by<br/>TAFASU 2018 </font>
+              <font color="#fff">Copyright &copy; by<br/>TAFASU 2017 </font>
             </div>
           </div>
         </div>
@@ -417,6 +455,5 @@
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/anime-thumb.js"></script>
-    <script src="js/ai-chan-to-top.js"></script>
   </body>
 </html>
