--- a/fansubview.html
+++ b/fansubview.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="css/ro.css">
     <link rel="stylesheet" href="css/tafasu.css?v=2018016-1">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css"/>
-    <link rel="stylesheet" type="text/css" href="css/theme-xmas.css"/>
-    <link rel="shortcut icon" href="images/xmas-favicon.png">
-    <meta name="theme-color" content="#B52F28">
+    <link rel="shortcut icon" href="images/default-favicon.png">
+    <meta name="theme-color" content="#004DA6">
     <meta property="og:image" content="https://i.imgur.com/4KTJuoM.png">
     <meta property="og:title" content="TAFASU - Fansub Community">
     <meta property="og:type" content="website">
@@ -28,7 +27,11 @@
         </div>
       </section>
       <div class="ro">
-        <p class="ro1"><img src="images/ro.png" height="750" width="750" alt=""></p>
+        <p class="ro1"><img src="images/ro/ro_01.png" height="750" width="750" alt=""></p>
+        <p class="ro2"><img src="images/ro/ro_02.png" height="750" width="750" alt=""></p>
+        <p class="ro1"><img src="images/ro/ro_03.png" height="750" width="750" alt=""></p>
+        <p class="ro2"><img src="images/ro/ro_04.png" height="750" width="750" alt=""></p>
+        <p class="ro1"><img src="images/ro/ro_05.png" height="750" width="750" alt=""></p>
       </div>
       <nav class="navbar navbar-default web-navbar">
         <div class="container">
@@ -150,7 +153,7 @@
                       <div class="su-custom-episode" style="background: #222427;">
                         Episode 05 [1080p]
                       </div>
-                      <div class="su-custom-status" style="background-color: #B52F28">
+                      <div class="su-custom-status" style="background-color: #004DA6">
                         กำลังทำ
                       </div>
                       <a href="watch.html" class="" target="_blank" data-original-title="" title="">
