--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv=Content-Type content="text/html; charset=UTF-8">
-    <title>TAFASU - Fansub Community</title>
+    <title>TAFASU - Fansub Communsity</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css?v=3.3.6">
     <link rel="stylesheet" href="css/ro.css">
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">TAFASU - Fansub Community</a>
+            <a class="navbar-brand" href="index.html">TAFASU - Fansub Commddunity</a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
